# PyFMRheo

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
examples/: Hertz Fit Example.ipynb  Hertz Fit Routine Example.ipynb  HertzFitComparisonOfFitMethods.ipynb  HertzFitExample.ipynb  Microrheology Analysis.ipynb  MicrorheologyExample.ipynb  Nanovesicles Models.ipynb  Piezo Characterization Example.ipynb  Piezo Characterization Multifile Example.ipynb  Piezo Characterization Routine Example.ipynb  PiezoCharExample.ipynb  Single Frequency Microrheology Example.ipynb  Test Gels Dataset.ipynb  Thermal Routine Example.ipynb  Ting Fit Example.ipynb  Ting Fit Routine Example.ipynb  Ting Models Example LMFIT.ipynb  Ting Models Example.ipynb  Ting Simulations.ipynb  TingRoutine_v2.ipynb  Untitled.ipynb  ViscoelasticFitExample.ipynb  Viscous Drag Example.ipynb  Viscous Drag Multi Frequency Example.ipynb  Viscous Drag Multifile Example.ipynb  Viscous Drag Steps Example.ipynb  ViscousDragExample.ipynb  tingexample.py
pyafmrheo/: double_powerlaw_fit.py  hertz_fit.py  ting_analytical_fit.py  ting_fit.py  ting_numerical_fit.py  viscous_drag_fit.py
pyafmrheo/models/: bec.py  calibration.py  double_powerlaw.py  drag_sphere_model.py  geom_coeffs.py  hertz.py  rheology.py  sader.py  sho.py  sine.py  ting.py  ting_analytical.py  ting_numerical.py
pyafmrheo/routines/: HertzFit.py  Microrheology.py  (+8 more)
tests/: TingFelix.py  matlab_ting.py  microrheology_routine.py  test_hertz_fit.py  test_ting_analytical.py  test_ting_fit.py  test_ting_models.py  ting_efremov.py
(+39 files in other folders)
