[metadata]
name = pyfmrheo
version = 0.1.2
author = Javier Lopez Alonso
author_email = jla.lopez.18@gmail.com
description = A python package to perform analysis of Force Microscopy data.
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/jlopezalo/PyFMRheo
project_urls =
    Bug Tracker = https://github.com/jlopezalo/PyFMRheo/issues
    repository = https://github.com/jlopezalo/PyFMRheo
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    numpy
    scipy
    lmfit
    pyfmreader
    requests
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src